--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "^16.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "html2pdf.js": "^0.10.3",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
+    "signature_pad": "^5.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -30,6 +33,7 @@
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jspdf": "^1.3.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
