--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,6 @@
   "projects": {
     "mon-projet": {
       "projectType": "application",
-      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -16,9 +15,7 @@
             "outputPath": "dist/mon-projet",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -50,6 +47,8 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/css/style.css",
               "src/assets/bootstrap-template/css/style.css",
               "src/assets/bootstrap-template/vendors/mdi/css/materialdesignicons.min.css",
               "src/assets/bootstrap-template/vendors/font-awesome/css/font-awesome.min.css",
@@ -58,6 +57,8 @@
               "src/styles.css"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "src/assets/bootstrap-template/vendors/js/vendor.bundle.base.js",
               "src/assets/bootstrap-template/js/off-canvas.js",
               "src/assets/bootstrap-template/js/misc.js",
@@ -90,7 +91,16 @@
               "vendorChunk": false,
               "extractLicenses": true,
               "sourceMap": false,
-              "namedChunks": false
+              "namedChunks": false,
+              "allowedCommonJsDependencies": [
+                "jspdf",
+                "html2canvas",
+                "dompurify",
+                "canvg",
+                "core-js",
+                "raf",
+                "rgbcolor"
+              ]
             },
             "development": {
               "buildOptimizer": false,
@@ -98,15 +108,23 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "allowedCommonJsDependencies": [
+                "jspdf",
+                "html2canvas",
+                "dompurify",
+                "canvg",
+                "core-js",
+                "raf",
+                "rgbcolor"
+              ]
             }
           },
           "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-          },
+          "options": {},
           "configurations": {
             "production": {
               "browserTarget": "mon-projet:build:production"
