--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mdi/font": "^7.4.47",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^7.1.0",
     "@types/jwt-decode": "^3.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "canvg": "^4.0.3",
     "glyphicons": "^0.2.0",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "signature_pad": "^5.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
