--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@stripe/stripe-js": "^7.1.0",
     "@types/jwt-decode": "^3.1.0",
     "angular-animations": "^0.11.0",
+    "bad-words": "^4.0.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "canvg": "^4.0.3",
@@ -51,6 +52,7 @@
     "@angular-devkit/build-angular": "^16.2.16",
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/bad-words": "^3.0.3",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
